# docs/swagger.json
@@ -28,7 +28,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/internal_handler_http.usersRefreshTokensInput"
+                            "$ref": "#/definitions/github.com_alseiitov_real-time-forum_internal_handler_http.usersRefreshTokensInput"
                         }
                     }
                 ],
@@ -36,7 +36,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/internal_handler_http.tokenResponse"
+                            "$ref": "#/definitions/github.com_alseiitov_real-time-forum_internal_handler_http.tokenResponse"
                         }
                     },
                     "400": {
@@ -302,7 +302,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github.com_alseiitov_real-time-forum_internal_handler_http.likeCommentInput"
+                            "$ref": "#/definitions/internal_handler_http.likeCommentInput"
                         }
                     }
                 ],
@@ -584,7 +584,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github.com_alseiitov_real-time-forum_internal_handler_http.createPostInput"
+                            "$ref": "#/definitions/internal_handler_http.createPostInput"
                         }
                     }
                 ],
@@ -592,7 +592,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/github.com_alseiitov_real-time-forum_internal_handler_http.createPostResponse"
+                            "$ref": "#/definitions/internal_handler_http.createPostResponse"
                         }
                     },
                     "400": {
@@ -789,7 +789,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github.com_alseiitov_real-time-forum_internal_handler_http.createCommentInput"
+                            "$ref": "#/definitions/internal_handler_http.createCommentInput"
                         }
                     }
                 ],
@@ -797,7 +797,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/github.com_alseiitov_real-time-forum_internal_handler_http.createCommentResponse"
+                            "$ref": "#/definitions/model.Comment"
                         }
                     },
                     "400": {
@@ -952,7 +952,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github.com_alseiitov_real-time-forum_internal_handler_http.likePostInput"
+                            "$ref": "#/definitions/internal_handler_http.likePostInput"
                         }
                     }
                 ],
@@ -1021,7 +1021,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/internal_handler_http.usersSignInInput"
+                            "$ref": "#/definitions/github.com_alseiitov_real-time-forum_internal_handler_http.usersSignInInput"
                         }
                     }
                 ],
@@ -1029,7 +1029,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/internal_handler_http.tokenResponse"
+                            "$ref": "#/definitions/github.com_alseiitov_real-time-forum_internal_handler_http.tokenResponse"
                         }
                     },
                     "400": {
@@ -1084,7 +1084,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/internal_handler_http.usersSignUpInput"
+                            "$ref": "#/definitions/github.com_alseiitov_real-time-forum_internal_handler_http.usersSignUpInput"
                         }
                     }
                 ],
@@ -1210,15 +1210,6 @@
                 },
                 "image": {
                     "type": "string"
-                }
-            }
-        },
-        "github.com_alseiitov_real-time-forum_internal_handler_http.createCommentResponse": {
-            "type": "object",
-            "properties": {
-                "commentID": {
-                    "type": "integer",
-                    "example": 1
                 }
             }
         },
@@ -1369,15 +1360,6 @@
                 },
                 "image": {
                     "type": "string"
-                }
-            }
-        },
-        "internal_handler_http.createCommentResponse": {
-            "type": "object",
-            "properties": {
-                "commentID": {
-                    "type": "integer",
-                    "example": 1
                 }
             }
         },
@@ -1535,10 +1517,16 @@
                 "postID": {
                     "type": "integer"
                 },
+                "rating": {
+                    "type": "integer"
+                },
                 "status": {
                     "type": "integer"
                 },
                 "userID": {
+                    "type": "integer"
+                },
+                "userRate": {
                     "type": "integer"
                 }
             }
@@ -1581,6 +1569,9 @@
                 "image": {
                     "type": "string"
                 },
+                "rating": {
+                    "type": "integer"
+                },
                 "status": {
                     "type": "integer"
                 },
@@ -1588,6 +1579,9 @@
                     "type": "string"
                 },
                 "userID": {
+                    "type": "integer"
+                },
+                "userRate": {
                     "type": "integer"
                 }
             }
